<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/button_quest"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/button_choix1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/button_laby"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/button_choix2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/button_lancer"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/button_choix3"
        />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/button_morse"
            android:layout_width="283dp"
            android:layout_height="50dp"
            android:text="@string/button_choix4" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>