<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_1"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="12sp"
            android:text="@string/Text_view_1"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="35dp"
            tools:textAlignment="center" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="336dp"
            android:text="@string/button_text3"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="362dp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="237dp"
            android:text="@string/button_text2"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="295dp" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:text="@string/button_text1"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="227dp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>