<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="543dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button_comp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="224dp"
            android:text="@string/but_comp" />

        <Button
            android:id="@+id/button_entrain"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="175dp"
            android:text="@string/but_entr" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="285dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="101dp"
            android:layout_marginEnd="49dp"
            android:accessibilityHeading="false"
            android:background="@color/colorPrimaryDark"
            android:text="@string/tex_comp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>